This file only list changes to game code.  Changes to content can be found here:

http://onehouronelife.com/updateLog.php



Version ???

--Fixed so that BELL and HELL arrow labels are in English.txt translation file
  instead of hard-coded.



Server Fixes:

--Clearing new emotes list immediately after composing new emotes message,
  instead of much later, so that emotes don't get added later, before clearing,
  and then missed.  Fixes bug where some GH players don't get their permanent
  emote assigned and sent properly.  Fixes #972

--Fixed a busy-wait 100% cpu server bug caused by ghosts tripping the old age
  timer and setting our poll timeout (via minMoveTime) to 0.

--Slim chance of GH players.

--Before, only a player's last SIDS-death mother would be remembered and
  avoided.  If the player did /DIE repeatedly, this last SIDS mother would be
  replaced, allowing them to revisit the same mother repeatedly over time,
  which was annoying.  Now we maintin a full list of every mother for which a
  given baby player has done /DIE, and we avoid those mothers as long as they
  remain alive.  If the baby player runs out of mothers, they go to Donkeytown.
  This will reduce the occurrence of SIDS generally, since players that are
  doing this will skip mothers that they want to avoid after only one visit.
  But also, it forces baby players to have some skin in the game.  If they SIDS
  too much, they will run out of mothers and go to Donkeytown (temporarily,
  until more mothers become available) instead of cycling through mothers
  forever and annoying people.  Fixes #983

--After using /DIE to cycle through mothers, and ending up in Donkeytown, your
  SIDS list is cleared.  So your stay in Donkeytown is only temporary, and
  after you die in Donkeytown, you can use /DIE to cycle back through mothers
  again.  Fixes #985
 
--On low-pop (< 8 players), /DIE-cycling players that run out of moms no longer